deploy/base/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-deployment
  namespace: landon-hotel
  labels:
    app: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: ghcr.io/{githubOrganizationName}/booking-service:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/booking-service/actuator/health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 10
      imagePullSecrets:
        - name: regcred
