deploy/base/booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: landon-hotel
spec:
  type: ClusterIP
  selector:
    app: booking-service
  ports:
    - port: 80
      targetPort: 8080
