deploy/base/guest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guest-service
  namespace: landon-hotel
spec:
  type: ClusterIP
  selector:
    app: guest-service
  ports:
    - port: 80
      targetPort: 8080
