deploy/base/hotel-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-webapp-service
  namespace: landon-hotel
spec:
  type: ClusterIP
  selector:
    app: hotel-webapp
  ports:
    - port: 80
      targetPort: 8080
